# freddie

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  bacon.toml  rust-toolchain.toml
.github/workflows/: ci.yml  pages.yml  publish.yml
chrome-extension/: .prettierignore  README.md  eslint.config.js  manifest.json  options.html  package.json  pnpm-lock.yaml  tsconfig.json
chrome-extension/src/: background.ts  options.ts
chrome-extension/src/wire/: IncomingEvent.ts  TabMessage.ts
crates/bind/: Cargo.toml
crates/bind/src/: lib.rs
crates/bind/tests/: accumulate.rs  derived.rs  dispatch.rs  tuple.rs
crates/bind/tests/common/: mod.rs
crates/bind/tests/compile_fail/: marker_not_bindings.rs  marker_not_bindings.stderr  missing_binds.rs  missing_binds.stderr  trigger_not_into.rs  trigger_not_into.stderr
crates/bind_macro/: Cargo.toml
crates/bind_macro/src/: lib.rs
crates/derive_support/: Cargo.toml
crates/derive_support/src/: lib.rs
crates/freddie/: Cargo.toml
crates/freddie/src/: always_equal.rs  drop_guard.rs  lib.rs  sequence.rs  timer.rs
crates/freddie/tests/: sequence.rs
crates/freddie_app_nav/: Cargo.toml
crates/freddie_app_nav/src/: lib.rs
crates/freddie_cli/: Cargo.toml
crates/freddie_cli/src/: client.rs  daemon.rs  instance.rs  lib.rs  logging.rs  verb.rs
crates/freddie_event_socket/: Cargo.toml
crates/freddie_event_socket/src/: lib.rs
crates/freddie_event_socket/tests/: socket.rs
crates/freddie_keyboard/: Cargo.toml
crates/freddie_keyboard/src/: lib.rs
crates/freddie_keyboard/src/sys/: macos.rs  mod.rs
crates/freddie_keys/: Cargo.toml
crates/freddie_keys/src/: lib.rs  sequence.rs
crates/freddie_keys/tests/: sequence.rs
crates/freddie_main_loop/: Cargo.toml
crates/freddie_main_loop/src/: lib.rs
crates/freddie_menu_bar/: Cargo.toml
crates/freddie_menu_bar/src/: lib.rs
crates/freddie_overlay/: Cargo.toml
crates/freddie_overlay/src/: lib.rs
crates/freddie_single_instance/: Cargo.toml
crates/freddie_single_instance/src/: lib.rs
crates/freddie_windows/: Cargo.toml
crates/freddie_windows/src/: lib.rs
crates/laserbeam/: Cargo.toml  README.md
crates/laserbeam/src/: lib.rs
crates/laserbeam/tests/: compile_fail.rs  derived.rs  enum_node.rs  recursive.rs  reresolve.rs  root_enum_multi.rs
crates/laserbeam/tests/compile_fail/: bad_variant.rs  bad_variant.stderr  both_role_attrs.rs  both_role_attrs.stderr  no_role.rs  no_role.stderr  two_laserbeam.rs  two_laserbeam.stderr  two_resolve_into.rs  two_resolve_into.stderr
crates/laserbeam_macro/: Cargo.toml  README.md
crates/laserbeam_macro/src/: lib.rs
crates/mercury/: Cargo.toml  README.md
crates/mercury/assets/: hg.freddie.mercury.plist
crates/mercury/src/: agent.rs  cli.rs  client.rs  daemon.rs  effect.rs  external.rs  lib.rs  logging.rs  main.rs  model.rs  sources.rs  state.rs
crates/mercury/src/handlers/: app.rs  foreground.rs  home.rs  mod.rs  nav.rs  overlay.rs  quit.rs  resize.rs  root.rs  tab.rs  toggle.rs  typing.rs  window.rs
crates/mercury/src/state/: app.rs  home.rs  mod.rs  nav.rs  resize.rs  site.rs  typing.rs
crates/mercury/src/state/overlays/: chrome.txt  claude-ai.txt  ghostty.txt  home.txt  inapp.txt  nav.txt  resize.txt  site.txt  typing.txt
crates/mercury/tests/: external.rs  transitions.rs
crates/rayban/: Cargo.toml  README.md
crates/rayban/src/: lib.rs
crates/rayban/tests/: derived.rs  enum_node.rs  recursive.rs  reresolve.rs  root_enum_multi.rs  tree.rs
crates/rayban/tests/compile_fail/: bad_variant.rs  bad_variant.stderr  both_role_attrs.rs  both_role_attrs.stderr  no_role.rs  no_role.stderr  two_rayban.rs  two_rayban.stderr  two_resolve_into.rs
crates/rayban_macro/: Cargo.toml  README.md
crates/rayban_macro/src/: lib.rs
docs/: platform-apis.md
docs-website/: docusaurus.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sidebars.ts
docs-website/blog/: 2026-07-19-hello.mdx  authors.yml  tags.yml
docs-website/blog/2026-07-20-announcing-freddie/: index.mdx
docs-website/docs/: adding-an-effect.md  connecting-a-new-source-of-events.md  getting-started-with-mercury.md  implementing-your-own-handler.md  index.md  index.mdx
docs-website/docs/architecture/: dispatch-and-precedence.md  index.md  testing.md  the-crates.md  the-data-model.md  the-event-loop.md  timers.md  typed-paths.md  (+1 more)
refactors/past/: accumulate-takes-a-path.md  ascend-through-derived.md  bind.md  cgevent-vs-hid.md  chrome-extension.md  chrome-tab-url.md  derived-child-persistence.md  derived-level-multiple-parents.md  derived-levels-plan.md  dispatch.md  display-events.md  emitted-flags.md  event-loop.md  external-events.md  foreground-events.md  freddie-cli-off-macos.md  freddie-daemon-runtime.md  keyboard-capture.md  keyboard-emit.md  laserbeam-design.md  laserbeam-missing-features.md  laserbeam-plan.md  laserbeam-state-controlled-children.md  layer-modules.md  layer-timeout.md  main-thread.md  menu-bar-layer.md  menu-bar-v0.md  mercury-daemon-verb.md  mercury-start.md  mercury-stop.md  nav-into-app.md  overall-plan.md  passthrough.md  placement-in-the-model.md  rayban-design.md  remove-pause.md  reuse-existing-crates.md  seed-at-construction.md  self-trigger.md  (+7 more)
refactors/pending/: agent-to-freddie.md  agentic-layer.md  also-binds.md  app-foregrounding.md  app-verbs.md  ascend-by-ref.md  ascend-through-derived.md  audio-device-events.md  audio-during-a-meeting.md  bind.md  bounded-log.md  causal-protocol.md  cgevent-vs-hid.md  chrome-extension.md  chrome-tab-url.md  clock-events.md  co-firing-binds.md  crate-groups.md  custom-resolve-into.md  derive-missing-features.md  derived-child-iterator.md  derived-child-persistence.md  derived-level-multiple-parents.md  derived-levels-plan.md  dispatch.md  display-power.md  drop-emits-effects.md  effect-sink.md  effects-and-events.md  emitted-flags.md  enable-disable.md  event-loop.md  event-timing.md  extension-commands.md  external-effects.md  external-events.md  foreground-events.md  freddie-cli-off-macos.md  freddie-cli-plan.md  freddie-cli.md  (+92 more)
(+15 files in other folders)
