[workspace]
resolver = "3"
members = [
    "crates/freddie",
    "crates/laserbeam",
    "crates/derive_support",
    "crates/bind",
    "crates/bind_macro",
    "crates/freddie_keys",
    "crates/freddie_keyboard",
    "crates/freddie_app_nav",
    "crates/freddie_event_socket",
    "crates/freddie_main_loop",
    "crates/freddie_menu_bar",
    "crates/freddie_overlay",
    "crates/freddie_windows",
    "crates/freddie_single_instance",
    "crates/freddie_cli",
    "crates/mercury",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/freddiehg/freddie"

[workspace.lints.rust]
unsafe_code = "forbid"
# Unused imports, variables, and the like fail the build rather than warn, so a stray
# import cannot slip through review.
unused = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# Driven by the transitive dependency tree, not our code.
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
# The root cursor is a `&mut Root`, so a projection over it is `&mut &mut Root`.
# That double reference is intrinsic to the first level and appears in generated code.
mut_mut = "allow"
# The codebase uses `pub(crate)` deliberately to mark crate-internal items, including inside
# private modules where `pub` would be equivalent. That intent is worth keeping over the lint's
# preference for the shorter `pub`.
redundant_pub_crate = "allow"
# `.map_err(|_| E)` reads fine; we do not want to spell the ignored unit as `|()|`. (Only fires
# from clippy 1.97 on; kept explicit so the lint stays off whatever the toolchain.)
ignored_unit_patterns = "allow"
# A type with no data is spelled `struct Foo;`. Braces on an empty struct read as fields that
# were removed or are coming, and a state node that genuinely gains one says so by gaining it.
# From the `restriction` group, which no other group pulls in, so it needs its own line here and
# in every crate that keeps its own lints table.
empty_structs_with_brackets = "deny"
