[package]
name = "bind"
description = "Dispatch events against a laserbeam state tree."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# The clobber check. It is a TEST, not a runtime path: nothing in a shipped binary calls
# `accumulate`. A consumer that ships sets `default-features = false`, and the derive then
# emits no `EventHandler` impl at all.
default = ["check"]
check = []

[dependencies]
bind_macro = { path = "../bind_macro", version = "0.0.1" }
laserbeam = { path = "../laserbeam", version = "0.0.1" }

[dev-dependencies]
trybuild = "1"

[lints]
workspace = true
