[package]
name = "bind_macro"
description = "Derive macro for bind: implements EventHandler::accumulate."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
# "full" is what lets a trigger be written as a closure: `Expr::Closure` is a full-syntax
# expression, and without it syn cannot parse one.
syn = { version = "2", features = ["full"] }
derive_support = { path = "../derive_support", version = "0.0.1" }

[lints]
workspace = true
