[package]
name = "derive_support"
description = "Shared syn helpers for the laserbeam and bind derives: node-shape parsing."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"

[lints]
workspace = true
