[package]
name = "freddie"
description = "freddie: a framework for typed event-to-state machines (work in progress; name reservation)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Test-only equality: `AlwaysEqual` compares equal only under this, so it stays out of the
# normal build.
testing = []

[lints]
workspace = true
