[package]
name = "freddie"
description = "freddie: a framework for typed event-to-state machines (work in progress; name reservation)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bind = { path = "../bind", version = "0.0.1", default-features = false }
freddie_keys = { path = "../freddie_keys", version = "0.0.1" }
tokio = { version = "1", features = ["sync"] }

[features]
# Test-only equality: `AlwaysEqual` compares equal only under this, so it stays out of the
# normal build.
testing = []

[lints]
workspace = true
