[package]
name = "freddie_app_nav"
description = "App foregrounding and frontmost-app watching for freddie (the macOS app-navigation source and sink)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tracing = "0.1"
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = [
    "NSString",
    "NSNotification",
    "NSDictionary",
] }

# Not `workspace = true`: the workspace forbids `unsafe_code`, and `forbid` cannot
# be relaxed from inside the crate. Observing `NSWorkspace` needs four unsafe
# operations (two unsafe objc methods and two extern statics), each allowed at its
# call site with a SAFETY comment. Every other lint matches the workspace, and
# every other crate keeps the `forbid`.
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
# Matches the workspace table, which this crate does not inherit.
empty_structs_with_brackets = "deny"
