[package]
name = "freddie_cli"
description = "The lifecycle verbs for a program that runs one daemon at a time, per instance."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
freddie_single_instance = { path = "../freddie_single_instance", version = "0.0.1" }
clap = { version = "4.6.2", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[lints]
workspace = true
