[package]
name = "freddie_event_socket"
description = "A loopback WebSocket that hands each text frame to a callback."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# 0.24 pins tungstenite 0.24, where `WebSocketConfig` is a `#[non_exhaustive]` struct with public
# fields. 0.26 replaced those with builder methods, so the config literal in `serve` changes with it.
tokio-tungstenite = "0.24"
tokio = { version = "1", features = ["net", "rt", "macros", "sync"] }
futures-util = { version = "0.3", default-features = false }
http = "1"
tracing = "0.1"

[dev-dependencies]
futures-util = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["net", "rt", "macros", "sync", "time"] }

[lints]
workspace = true
