[package]
name = "freddie_main_loop"
description = "Give the main thread to the platform run loop, so AppKit can deliver its callbacks there."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
core-foundation = { version = "0.10", features = ["link"] }

# Not `workspace = true`: the workspace forbids `unsafe_code`, and `forbid` cannot
# be relaxed from inside the crate. Reading `kCFRunLoopDefaultMode`, an extern
# static, is unsafe. Everything else here is safe. Every other lint matches the
# workspace, and every other crate keeps the `forbid`.
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
