[package]
name = "freddie_windows"
description = "Placing the focused window on screen, for freddie (the macOS window-management sink)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
accessibility-sys = "0.1"
block2 = "0.6"
core-foundation = { version = "0.10", features = ["link"] }
core-graphics = { version = "0.25", features = ["link"] }
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSScreen", "NSWorkspace", "NSRunningApplication", "NSApplication", "NSResponder"] }
objc2-foundation = { version = "0.3", features = ["NSNotification"] }
tracing = "0.1"

# Not `workspace = true`: the workspace forbids `unsafe_code`, and `forbid` cannot
# be relaxed from inside the crate. The Accessibility API is raw C, so every call
# is unsafe and allowed at its site with a SAFETY comment. Every other lint
# matches the workspace, and every other crate keeps the `forbid`.
[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"
# Matches the workspace table, which this crate does not inherit.
empty_structs_with_brackets = "deny"
