[package]
name = "laserbeam"
description = "Mutable resolved paths (composed lenses and prisms) into a single-owner tree."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
laserbeam_macro = { path = "../laserbeam_macro", version = "0.0.1" }

[dev-dependencies]

[lints]
workspace = true
