[package]
name = "mercury"
description = "A small demo keyboard-remapping model built on freddie (laserbeam + bind)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
laserbeam = { path = "../laserbeam", version = "0.0.1" }
bind = { path = "../bind", version = "0.0.1", default-features = false }
freddie = { path = "../freddie", version = "0.0.1" }
freddie_keys = { path = "../freddie_keys", version = "0.0.1" }
freddie_keyboard = { path = "../freddie_keyboard", version = "0.0.1" }
freddie_app_nav = { path = "../freddie_app_nav", version = "0.0.1" }
freddie_main_loop = { path = "../freddie_main_loop", version = "0.0.1" }
freddie_menu_bar = { path = "../freddie_menu_bar", version = "0.0.1" }
freddie_windows = { path = "../freddie_windows", version = "0.0.1" }
derive_more = { version = "2", features = ["from", "try_into"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

[features]
# Derives the tests need and the normal build does not: effect equality, for asserting what a
# dispatch produced. Turned on for this crate's own tests through the self dev-dependency below,
# and, like `bind`'s `check`, kept out of `cargo build -p mercury` by resolver 3.
testing = ["freddie/testing"]

[dev-dependencies]
# Turns the check on for TESTS only. With resolver 3 a dev-dependency's features do not leak
# into the normal build, so `cargo build -p mercury` has no `accumulate`.
bind = { path = "../bind", version = "0.0.1", features = ["check"] }
# Turns `testing` on for this crate's own tests, the same way: dev-only, so the derives it
# gates never reach the normal build.
mercury = { path = ".", features = ["testing"] }

[lints]
workspace = true
