[package]
name = "mercury"
description = "A small demo keyboard-remapping model built on freddie (laserbeam + bind)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
laserbeam = { path = "../laserbeam", version = "0.0.1" }
bind = { path = "../bind", version = "0.0.1", default-features = false }
freddie = { path = "../freddie", version = "0.0.1" }
freddie_keys = { path = "../freddie_keys", version = "0.0.1" }
freddie_keyboard = { path = "../freddie_keyboard", version = "0.0.1" }
freddie_app_nav = { path = "../freddie_app_nav", version = "0.0.1" }
freddie_main_loop = { path = "../freddie_main_loop", version = "0.0.1" }
freddie_menu_bar = { path = "../freddie_menu_bar", version = "0.0.1" }
freddie_overlay = { path = "../freddie_overlay", version = "0.0.1" }
freddie_windows = { path = "../freddie_windows", version = "0.0.1" }
freddie_single_instance = { path = "../freddie_single_instance", version = "0.0.1" }
derive_more = { version = "2", features = ["from", "try_into"] }
tokio = { version = "1", features = ["rt", "macros", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
clap = { version = "4.6.2", features = ["derive", "env"] }
freddie_event_socket = { version = "0.0.1", path = "../freddie_event_socket" }
serde = { version = "1.0.229", features = ["derive"] }
# `mercury install` writes a launch agent. Serialized rather than templated, so a home directory
# with an `&` in it cannot produce a malformed plist.
plist = "1.10"
serde_json = "1.0.150"
ts-rs = { version = "10", features = ["serde-compat"], optional = true }
# The clipboard, for the copies. `NSPasteboard` through objc2, which is the stack the overlay and
# the menu bar already sit on, so on this target it adds itself and nothing else. Default features
# off: the image ones pull the `image` crate to move pictures mercury never touches.
arboard = { version = "3.6.1", default-features = false }

[features]
# Off in every normal build. The derive writes `chrome-extension/src/wire/*.ts` during a test run
# and nothing in mercury reads it, so it is `--all-features` (pre-commit and CI) that keeps the
# checked-in output honest.
typescript = ["dep:ts-rs"]
# Derives the tests need and the normal build does not: effect equality, for asserting what a
# dispatch produced. Turned on for this crate's own tests through the self dev-dependency below,
# and, like `bind`'s `check`, kept out of `cargo build -p mercury` by resolver 3.
testing = ["freddie/testing"]
ts-rs = ["dep:ts-rs"]

[dev-dependencies]
# Turns the check on for TESTS only. With resolver 3 a dev-dependency's features do not leak
# into the normal build, so `cargo build -p mercury` has no `accumulate`.
bind = { path = "../bind", version = "0.0.1", features = ["check"] }
# Turns `testing` on for this crate's own tests, the same way: dev-only, so the derives it
# gates never reach the normal build.
mercury = { path = ".", features = ["testing"] }
# The transitions tests rebuild a timer effect to assert what entering nav produced.
freddie = { path = "../freddie", version = "0.0.1" }
tokio-tungstenite = "0.24"
futures-util = { version = "0.3.33", default-features = false }
tokio = { version = "1", features = ["rt", "macros", "net", "time"] }

[lints]
workspace = true
