[package]
name = "rayban"
description = "Mutable resolved paths (composed lenses and prisms) into a single-owner tree."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
rayban_macro = { path = "../rayban_macro", version = "0.0.1" }

[lints]
workspace = true
