[package]
name = "rayban_macro"
description = "Derive macro for rayban: typed mutable resolved paths into a single-owner tree."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[lints]
workspace = true
